# Rust-Memory-Hacker

./: .cursorrules  Cargo.toml
src/: error.rs  main.rs  memory.rs  menu.rs  process.rs
