[package]
name = "rust-memory-hacker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "memoryapi", "psapi", "securitybaseapi", "winbase", "minwindef", "winnt"] }
sysinfo = { version = "0.30", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dialoguer = "0.11"
